getting closer to working IndexSmokeTest

--- a/build.properties
+++ b/build.properties
@@ -6,7 +6,6 @@ name = solrmarc
 src.dir = src
 core.src.dir = ${src.dir}/core
 lib.dir = lib
-solrj.lib.dir = ${lib.dir}/solrj-lib
 build.dir = build
 core.build.dir = ${build.dir}
 dist.dir = dist
@@ -24,10 +23,10 @@ scripts.dir = index_scripts
 
 doc.dir = javadoc
 
-solr.war.path = ${site.dir}/solrConf/apache-solr-3.5.0.war
+# --- SOLR properties for building
+solrj.lib.dir = ${lib.dir}/solrj-lib
 
-
-# --- TEST properties ---
+# --- core TEST properties ---
 test.dir = test
 test.lib.dir = ${test.dir}/lib
 core.test.dir = ${test.dir}/core
@@ -54,23 +53,23 @@ core.test.class = org.solrmarc.tools.IndexSmokeTest
 ### core.test.class = org.solrmarc.tools.StringNaturalCompareTest
 ### core.test.class = org.solrmarc.tools.UtilUnitTests
 
-# test.solr.path - Solr.home location where the TEST solr instance is found
+
+# --- SOLR/JETTY properties for core TEST
+core.test.solr.orig.dir = ${test.dir}/solr
+core.solr.war.path = ${core.test.solr.orig.dir}/war/apache-solr-3.5.0.war
+# test.solr.jar.dir - a directory for the solr jars used to run core tests
+test.solr.jar.dir = ${test.dir}/jars_from_solr_war
+
+test.solr.verbose = true
+
 test.jetty.dir = ${test.dir}/jetty
 test.jetty.port = 8985
 test.solr.url = http://localhost:${test.jetty.port}/solr
-test.solr.path = ${test.jetty.dir}/solr
-test.solr.data.dir = ${test.solr.path}/data
-test.solr.verbose = true
-
-
-test.solr.orig.dir = ${test.dir}/solr
+# test.solr.run.dir - location of the solr instance instantiated for testing
 test.solr.run.dir = ${test.jetty.dir}/solr
+test.solr.data.dir = ${test.solr.run.dir}/data
 
-core.solr.war.path = ${solr.war.path}
-
-#- test.solr.hosturl - URL of where the solr server is running
-#test.solr.hosturl = http://localhost:8987/solr
-test.jetty.port = 8987
+test.solr.run.dir = ${test.jetty.dir}/solr
 
 cobertura.jar.dir = ${test.lib.dir}/cobertura-1.9.4.1
 
@@ -99,7 +98,7 @@ default.config = sw_config.properties
 #  sw-solr-xxx
 #solrmarc.solr.war.path = /home/blacklight/solr-war/apache-solr-3.5.0.war
 #  continuous integration and laptop
-site.solr.war.path = ${solr.war.path}
+solr.war.path = ${site.dir}/solrConf/apache-solr-3.5.0.war
 
 
 # - solr.path - used when building your site's solrmarc, if you're using Solr
