--- a/test/core/test_core_config.properties
+++ b/test/core/test_core_config.properties
@@ -7,7 +7,7 @@ solr.indexer = org.solrmarc.index.SolrIndexer
 solr.indexer.properties = test_core_index.properties
 
 # URL of running solr search engine to cause updates to be recognized.
-solr.hosturl = http://localhost:8987
+#solr.hosturl = http://localhost:8987
 
 # Settings to control how the records are handled as they are read in.
 
@@ -20,7 +20,7 @@ marc.to_utf_8 = true
 marc.permissive = true
 
 # - marc.default_encoding - possible values are MARC8, UTF-8, UNIMARC, BESTGUESS
-marc.default_encoding = BESTGUESS
+marc.default_encoding = MARC8
 
 # - marc.include_erros - when error in marc record, dump description of error 
 #   to field in solr index an alternative way to trap the indexing error 
