--- a/test/core/test_core_index.properties
+++ b/test/core/test_core_index.properties
@@ -1,7 +1,5 @@
 id = 001, first
-title_text = 245a
+title_t = 245a
 title_display = 245a
 
-#marc_display = FullRecordAsMARC
-#marc_display = FullRecordAsText
 marc_display = FullRecordAsMARC
