trying to turn off stderr and stdout on testing, and tweaking ant properties for testing

--- a/build.properties
+++ b/build.properties
@@ -9,24 +9,31 @@ lib.dir = lib
 build.dir = build
 core.build.dir = ${build.dir}
 dist.dir = dist
-log4j.props = conf/log4j.properties
 
+
+log4j.props = conf/log4j.properties
 
 #path for executable scripts relative to the dist dir
 dist.exe.dir = bin
-
 trans.map.dir = translation_maps
+javadoc.dir = docs/javadoc
 
 buildtools.path = setup/buildtools
 script.template.dir = script_templates
 scripts.dir = index_scripts
 
-doc.dir = javadoc
-
-# --- SOLR properties for building
+# --- SOLR properties for building (not running)
 solrj.lib.dir = ${lib.dir}/solrj-lib
 
+# --- SOLR properties for running
+use.remote.solr = true
+solr.url = http://localhost:8983/solr
+solr.verbose = true
+
+
 # --- core TEST properties ---
+cobertura.jar.dir = ${test.lib.dir}/cobertura-1.9.4.1
+
 test.dir = test
 test.lib.dir = ${test.dir}/lib
 core.test.dir = ${test.dir}/core
@@ -38,8 +45,6 @@ core.test.use_binary_request_handler = true
 core.test.use_streaming_proxy = true
 
 core.test.data.path = ${core.test.dir}/data
-#test.data.file
-#test.config.dir
 core.test.config.file = ${core.test.dir}/test_core_config.properties
 
 ### core.test.class = org.solrmarc.tools.CallNumberUnitTests
@@ -66,11 +71,6 @@ test.solr.url = http://localhost:${test.jetty.port}/solr
 # test.solr.run.dir - location of the solr instance instantiated for testing
 test.solr.run.dir = ${test.jetty.dir}/solr
 test.solr.data.dir = ${test.solr.run.dir}/data
-
-test.solr.run.dir = ${test.jetty.dir}/solr
-
-cobertura.jar.dir = ${test.lib.dir}/cobertura-1.9.4.1
-
 
 
 #--- SITE properties ---
