--- a/build.xml
+++ b/build.xml
@@ -221,7 +221,7 @@
 		<!-- if no core test class is defined, call the Util Unit test -->
 		<property name="core.test.class"  value="org.solrmarc.tools.UtilUnitTests" />
 
-    <junit showoutput="yes" printsummary="withOutAndErr" fork="yes" forkmode="perBatch">
+    <junit showoutput="yes" printsummary="yes" fork="yes" forkmode="perBatch">
 			<classpath refid="test.core.run.classpath" />
 			<formatter type="plain" usefile="false" />
 
