--- a/build.properties
+++ b/build.properties
@@ -51,10 +51,10 @@ core.test.config.file = ${core.test.dir}/test_core_config.properties
 #core.test.class = org.solrmarc.tools.CommandLineUtilTests
 ### core.test.class = org.solrmarc.tools.GetFormatMixinTest
 ### core.test.class = org.solrmarc.tools.HathiJsonReaderTest
-core.test.class = org.solrmarc.tools.IndexSmokeTest
+### core.test.class = org.solrmarc.tools.IndexSmokeTest
 ### core.test.class = org.solrmarc.tools.MergeSummaryHoldingsTests
 ### core.test.class = org.solrmarc.tools.RecordReaderTest
-#core.test.class = org.solrmarc.tools.RemoteServerTest
+core.test.class = org.solrmarc.tools.RemoteServerTest
 ### core.test.class = org.solrmarc.tools.StringNaturalCompareTest
 ### core.test.class = org.solrmarc.tools.UtilUnitTests
 
