refactor test log level setting and fix test of (test) updates using http access

--- a/build.properties
+++ b/build.properties
@@ -13,6 +13,13 @@ dist.dir = dist
 
 log4j.props = conf/log4j.properties
 
+# FIXME:  use these properties
+# java.util.logging level settings for solr logging:  OFF, SEVERE, WARNING, INFO, FINE, FINER, FINEST, ALL
+solr.log.level = SEVERE
+# log4j logging level settings for solrmarc logging:  OFF, FATAL, WARN, INFO, DEBUG, ALL
+solrmarc.log.level = WARN
+
+
 #path for executable scripts relative to the dist dir
 dist.exe.dir = bin
 trans.map.dir = translation_maps
@@ -58,12 +65,14 @@ core.test.class = org.solrmarc.tools.RemoteServerTest
 ### core.test.class = org.solrmarc.tools.StringNaturalCompareTest
 ### core.test.class = org.solrmarc.tools.UtilUnitTests
 
+# java.util.logging level settings for solr logging:  OFF, SEVERE, WARNING, INFO, FINE, FINER, FINEST, ALL
+test.solr.log.level = INFO
+# log4j logging level settings for solrmarc logging:  OFF, FATAL, WARN, INFO, DEBUG, ALL
+test.solrmarc.log.level = INFO
 
 # --- SOLR/JETTY properties for core TEST
 core.test.solr.orig.dir = ${test.dir}/solr
 core.solr.war.path = ${core.test.solr.orig.dir}/war/apache-solr-3.5.0.war
-
-test.solr.verbose = true
 
 test.jetty.dir = ${test.dir}/jetty
 test.jetty.port = 8985
