--- a/build.xml
+++ b/build.xml
@@ -235,13 +235,13 @@
 			<sysproperty key="solr.path" value="${test.solr.run.dir}" />
     	<sysproperty key="solrmarc.use_binary_request_handler" value="${core.test.use_binary_request_handler}" />
     	<sysproperty key="solrmarc.use_streaming_proxy" value="${core.test.use_streaming_proxy}" />
-			<sysproperty key="test.solr.verbose" value="${test.solr.verbose}" />
+			<sysproperty key="test.solr.log.level" value="${test.solr.log.level}" />
+			<sysproperty key="test.solrmarc.log.level" value="${test.solrmarc.log.level}" />
     	
 <!--    	
 			<sysproperty key="test.data.file" value="${test.data.file}" />
 			<sysproperty key="test.config.dir" path="${dist.path}" />
 			<sysproperty key="solr.data.dir" path="${site.test.solr.dir}/data" />
-			<sysproperty key="test.solr.verbose" value="${test.solr.verbose}" />
 -->    	
     	
 			<test name="${core.test.class}" />
