added test for SolrUpdate class, some refactoring along the way

--- a/build.properties
+++ b/build.properties
@@ -62,11 +62,12 @@ core.test.config.file = ${core.test.dir}/test_core_config.properties
 ### core.test.class = org.solrmarc.tools.MergeSummaryHoldingsTests
 ### core.test.class = org.solrmarc.tools.RecordReaderTest
 core.test.class = org.solrmarc.tools.RemoteServerTest
+### core.test.class = org.solrmarc.tools.SolrUpdateTest
 ### core.test.class = org.solrmarc.tools.StringNaturalCompareTest
 ### core.test.class = org.solrmarc.tools.UtilUnitTests
 
 # java.util.logging level settings for solr logging:  OFF, SEVERE, WARNING, INFO, FINE, FINER, FINEST, ALL
-test.solr.log.level = INFO
+test.solr.log.level = WARN
 # log4j logging level settings for solrmarc logging:  OFF, FATAL, WARN, INFO, DEBUG, ALL
 test.solrmarc.log.level = INFO
 
