removing commented out lines

--- a/build.properties
+++ b/build.properties
@@ -69,7 +69,7 @@ core.test.class = org.solrmarc.tools.RemoteServerTest
 # java.util.logging level settings for solr logging:  OFF, SEVERE, WARNING, INFO, FINE, FINER, FINEST, ALL
 test.solr.log.level = WARN
 # log4j logging level settings for solrmarc logging:  OFF, FATAL, WARN, INFO, DEBUG, ALL
-test.solrmarc.log.level = INFO
+test.solrmarc.log.level = WARN
 
 # --- SOLR/JETTY properties for core TEST
 core.test.solr.orig.dir = ${test.dir}/solr
