updating to use solr 3.6 nightly to get fix for solrj streaming AND binaryrequesthandler

--- a/build.properties
+++ b/build.properties
@@ -74,7 +74,7 @@ test.solrmarc.log.level = WARN
 
 # --- SOLR/JETTY properties for core TEST
 core.test.solr.orig.dir = ${test.dir}/solr
-core.solr.war.path = ${core.test.solr.orig.dir}/war/apache-solr-3.5.0.war
+core.solr.war.path = ${core.test.solr.orig.dir}/war/apache-solr-3.6-2011-12-15_08-09-30.war
 
 test.jetty.dir = ${test.dir}/jetty
 test.jetty.port = 8985
@@ -107,7 +107,8 @@ default.config = sw_config.properties
 #  sw-solr-xxx
 #solrmarc.solr.war.path = /home/blacklight/solr-war/apache-solr-3.5.0.war
 #  continuous integration and laptop
-solr.war.path = ${site.dir}/solrConf/apache-solr-3.5.0.war
+# NOT CURRENTLY USED  2011-12-15
+#solr.war.path = ${site.dir}/solrConf/apache-solr-3.6-2011-12-15_08-09-30.war
 
 
 # - solr.path - used when building your site's solrmarc, if you're using Solr
