--- a/test/core/data/test_config.properties
+++ b/test/core/data/test_config.properties
@@ -7,7 +7,9 @@
 # solrmarc.solr.war.path - must point to either a war file for the version of Solr that
 # you want to use, or to a directory of jar files extracted from a Solr war files.  If
 # this is not provided, SolrMarc can only work by communicating with a running Solr server.
-solrmarc.solr.war.path=${solrmarc.solr.war.path}
+# NO LONGER USED 2011-12-15
+#solrmarc.solr.war.path=${solrmarc.solr.war.path}
+
 
 # solrmarc.custom.jar.path - Jar containing custom java code to use in indexing. 
 # If solr.indexer below is defined (other than the default of org.solrmarc.index.SolrIndexer)
