run core tests using an AllTests class

--- a/build.properties
+++ b/build.properties
@@ -54,17 +54,9 @@ core.test.use_streaming_proxy = true
 core.test.data.path = ${core.test.dir}/data
 core.test.config.file = ${core.test.dir}/test_core_config.properties
 
-### core.test.class = org.solrmarc.tools.CallNumberUnitTests
+core.test.class = org.solrmarc.AllTests
 #core.test.class = org.solrmarc.tools.CommandLineUtilTests
-### core.test.class = org.solrmarc.tools.GetFormatMixinTest
-### core.test.class = org.solrmarc.tools.HathiJsonReaderTest
-### core.test.class = org.solrmarc.tools.IndexSmokeTest
-### core.test.class = org.solrmarc.tools.MergeSummaryHoldingsTests
-### core.test.class = org.solrmarc.tools.RecordReaderTest
-core.test.class = org.solrmarc.tools.RemoteServerTest
-### core.test.class = org.solrmarc.tools.SolrUpdateTest
-### core.test.class = org.solrmarc.tools.StringNaturalCompareTest
-### core.test.class = org.solrmarc.tools.UtilUnitTests
+#core.test.class = org.solrmarc.tools.MergeSummaryHoldingsTests
 
 # java.util.logging level settings for solr logging:  OFF, SEVERE, WARNING, INFO, FINE, FINER, FINEST, ALL
 test.solr.log.level = WARN
