revising build scripts for coverage - part one

--- a/build.properties
+++ b/build.properties
@@ -1,15 +1,12 @@
-# TOP LEVEL solrmarc properties file
+# TOP LEVEL SolrMarc properties file
 java.compat.version = 1.5
 
 name = solrmarc
 
 src.dir = src
-core.src.dir = ${src.dir}/core
 lib.dir = lib
 build.dir = build
-core.build.dir = ${build.dir}
 dist.dir = dist
-
 
 log4j.props = conf/log4j.properties
 
@@ -18,7 +15,6 @@ log4j.props = conf/log4j.properties
 solr.log.level = SEVERE
 # log4j logging level settings for solrmarc logging:  OFF, FATAL, WARN, INFO, DEBUG, ALL
 solrmarc.log.level = WARN
-
 
 #path for executable scripts relative to the dist dir
 dist.exe.dir = bin
@@ -29,6 +25,10 @@ buildtools.path = setup/buildtools
 script.template.dir = script_templates
 scripts.dir = index_scripts
 
+# CORE properties
+core.src.dir = ${src.dir}/core
+core.build.dir = ${build.dir}/core
+
 # --- SOLR properties for building (not running)
 solrj.lib.dir = ${lib.dir}/solrj-lib
 
@@ -37,12 +37,18 @@ use.remote.solr = true
 solr.url = http://localhost:8983/solr
 solr.verbose = true
 
+# --- TEST properties (general) ---
+test.dir = test
+test.lib.dir = ${test.dir}/lib
+
+# java.util.logging level settings for solr logging:  OFF, SEVERE, WARNING, INFO, FINE, FINER, FINEST, ALL
+test.solr.log.level = WARN
+# log4j logging level settings for solrmarc logging:  OFF, FATAL, WARN, INFO, DEBUG, ALL
+test.solrmarc.log.level = WARN
 
 # --- core TEST properties ---
 cobertura.jar.dir = ${test.lib.dir}/cobertura-1.9.4.1
 
-test.dir = test
-test.lib.dir = ${test.dir}/lib
 core.test.dir = ${test.dir}/core
 core.test.src.dir = ${core.test.dir}/src
 core.test.build.dir = ${build.dir}/${test.dir}
@@ -58,10 +64,11 @@ core.test.class = org.solrmarc.AllTests
 #core.test.class = org.solrmarc.tools.CommandLineUtilTests
 #core.test.class = org.solrmarc.tools.MergeSummaryHoldingsTests
 
-# java.util.logging level settings for solr logging:  OFF, SEVERE, WARNING, INFO, FINE, FINER, FINEST, ALL
-test.solr.log.level = WARN
-# log4j logging level settings for solrmarc logging:  OFF, FATAL, WARN, INFO, DEBUG, ALL
-test.solrmarc.log.level = WARN
+# --- Continuous Integration Properties
+ci.dir = ci
+core.ci.dir = ${ci.dir}/core
+core.instr.dir = ${core.ci.dir}/instr
+
 
 # --- SOLR/JETTY properties for core TEST
 core.test.solr.orig.dir = ${test.dir}/solr
