working ant tasks for CORE coverage reports

--- a/build.properties
+++ b/build.properties
@@ -47,11 +47,9 @@ test.solr.log.level = WARN
 test.solrmarc.log.level = WARN
 
 # --- core TEST properties ---
-cobertura.jar.dir = ${test.lib.dir}/cobertura-1.9.4.1
-
 core.test.dir = ${test.dir}/core
 core.test.src.dir = ${core.test.dir}/src
-core.test.build.dir = ${build.dir}/${test.dir}
+core.test.build.dir = ${core.build.dir}/${test.dir}
 
 core.test.use_solr_server_proxy = true
 core.test.use_binary_request_handler = true
@@ -66,8 +64,13 @@ core.test.class = org.solrmarc.AllTests
 
 # --- Continuous Integration Properties
 ci.dir = ci
-core.ci.dir = ${ci.dir}/core
-core.instr.dir = ${core.ci.dir}/instr
+coverage.dir = ${ci.dir}/coverage
+instr.dir = ${ci.dir}/instr
+
+# -- CORE Continuous Integration Properties
+core.instr.dir = ${instr.dir}/core
+core.coverage.dir = ${coverage.dir}/core
+core.coverage.test.class = org.solrmarc.AllTests
 
 
 # --- SOLR/JETTY properties for core TEST
